# marvelous-databricks-course-AgataChojowska

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  databricks.yml  main.py  project_config.yml  pyproject.toml  ruff.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
notebooks/: week3_feature_engineering_demo.py  week3_feature_engineering_demo_New.py  week4.01_deploy_model_serving_endpoint.py  week4.02_deploy_fe_model_serving_endpoint.py  week4.03_deploy_feature_serving_endpoint.py  week4.04_deploy_db_model_serving_endpoint.py  week4.05_ab_testing.py  week6.01_create_monitoring_table.py
scripts/: 01_preprocess_data.py  02_train_register_model.py  03_train_register_fe_model.py  04_deploy_model.py  05_post_commit_status.py  06_refresh_monitor.py
src/tennis/: catalog_utils.py  config.py  data_processor.py  stats_calculator.py
src/tennis-prediction/: config.py  runtime_utils.py
src/tennis-prediction/models/: custom_model.py
src/tennis/models/: custom_model.py  feature_lookup_model.py
src/tennis/serving/: fe_model_serving.py
src/tennisprediction/: __init__.py  catalog_utils.py  data_processor.py  monitoring.py  runtime_utils.py
src/tennisprediction/models/: custom_model.py  feature_lookup_model.py
tests/: conftest.py
tests/catalog/: X_train.csv  test_set.csv  train_set.csv  y_test.csv  y_train.csv
tests/fixtures/: custom_model_fixture.py  datapreprocessor_fixture.py
tests/test_data/: X_test.csv  X_train.csv  sample.csv  stats_data.csv  test_set.csv  train_set.csv  y_test.csv  y_train.csv
tests/unit_tests/: test_custom_model.py  test_dataprocessor.py
(+2 files in other folders)
